@@ -163,6 +163,7 @@
     "*://*.dailywire.com/*",
     "*://*.dallasnews.com/*",
     "*://*.defector.com/*",
+    "*://*.delish.com/*",
     "*://*.democratandchronicle.com/*",
     "*://*.demorgen.be/*",
     "*://*.denverpost.com/*",
@@ -200,6 +201,7 @@
     "*://*.elespectador.com/*",
     "*://*.elle.com/*",
     "*://*.elle.fr/*",
+    "*://*.elledecor.com/*",
     "*://*.elmercurio.com/*",
     "*://*.elmundo.es/*",
     "*://*.elnortedecastilla.es/*",
@@ -270,6 +272,7 @@
     "*://*.haarlemsdagblad.nl/*",
     "*://*.handelszeitung.ch/*",
     "*://*.harpers.org/*",
+    "*://*.harpersbazaar.com/*",
     "*://*.haz.de/*",
     "*://*.hbr.org/*",
     "*://*.hbrchina.org/*",
@@ -480,6 +483,7 @@
     "*://*.ocregister.com/*",
     "*://*.oklahoman.com/*",
     "*://*.omaha.com/*",
+    "*://*.oprahdaily.com/*",
     "*://*.oregonlive.com/*",
     "*://*.orlandosentinel.com/*",
     "*://*.ostsee-zeitung.de/*",
@@ -746,5 +750,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.3.1"
+  "version": "3.2.3.2"
 }
