@@ -5,12 +5,24 @@
     "useragent": "bingbot",
     "upd_version": "3.1.3.3"
   },
+  "Delish": {
+    "domain": "delish.com",
+    "allow_cookies": 1,
+    "block_regex": "(\\.com\\/_assets\\/jam\\/journey-data\\.js|\\.ensighten\\.com\\/.+\\/Bootstrap\\.js)",
+    "new_site": 1
+  },
   "Die Zeit": {
     "domain": "zeit.de",
     "allow_cookies": 1,
     "add_ext_link": "aside#paywall|div.article-body",
     "add_ext_link_type": "archive.is",
     "upd_version": "3.2.2.4"
+  },
+  "Elle Decor": {
+    "domain": "elledecor.com",
+    "allow_cookies": 1,
+    "block_regex": "(\\.com\\/_assets\\/jam\\/journey-data\\.js|\\.ensighten\\.com\\/.+\\/Bootstrap\\.js)",
+    "new_site": 1
   },
   "Ftm.eu": {
     "domain": "ftm.eu",
@@ -34,6 +46,12 @@
     "allow_cookies": 1,
     "useragent": "facebookbot",
     "upd_version": "3.0.8.3"
+  },
+  "Harper's Bazaar": {
+    "domain": "harpersbazaar.com",
+    "allow_cookies": 1,
+    "block_regex": "(\\.com\\/_assets\\/jam\\/journey-data\\.js|\\.ensighten\\.com\\/.+\\/Bootstrap\\.js)",
+    "new_site": 1
   },
   "Het Laatste Nieuws (link to archive.is)": {
     "domain": "hln.be",
@@ -61,6 +79,12 @@
     "block_regex": "\\.poool\\.fr\\/",
     "cs_code": "[{\"cond\":\"div.tlg-paywalled\", \"rm_class\": \"tlg-paywalled\"}]",
     "upd_version": "3.2.1.1"
+  },
+  "Oprah Daily": {
+    "domain": "oprahdaily.com",
+    "allow_cookies": 1,
+    "block_regex": "(\\.com\\/_assets\\/jam\\/journey-data\\.js|\\.ensighten\\.com\\/.+\\/Bootstrap\\.js)",
+    "new_site": 1
   },
   "Puck.news": {
     "domain": "puck.news",
