@@ -2,8 +2,10 @@
 Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
+Add Delish, Elle Decor, Harper's Bazaar & Oprah Daily
 Add NWT Media.se (opt-in to custom sites)
 Add Stuttgarter-zeitung.de
+Fix Hearst Communications magazines (js)
 
 * v3.2.3.0 (2023-07-02)
 Add Groupe ESH Medias (ch)
